tests/performance-test/grafana/grafana-route.yml
apiVersion: v1
kind: Route
metadata:
  name: grafana
  labels:
    app: performance-test
spec:
  to:
    kind: Service
    name: grafana
